small ui changes

--- a/src/components/Table.scss
+++ b/src/components/Table.scss
@@ -1,14 +1,14 @@
 @import 'antd/dist/antd.css';
 
-.ant-table-pagination>* {
-    flex: none;
-    width: 50px;
-    float: right !important;
-    height: 50px !important;
-}
+// .ant-table-pagination>* {
+//     flex: none;
+//     width: 50px;
+//     float: right !important;
+//     height: 50px !important;
+// }
 
 .ant-table-pagination-right {
-    justify-content: center !important;
+   // justify-content: center !important;
     background: #f4f2ff !important;
 }
 
