--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -13,6 +13,9 @@
 
 .characters {
     grid-column-gap: 70px;
+    align-items: center;
+    justify-content: center;
+    grid-row-gap: 10px;
 }
 
 .ant-col {
